--- a/Example/VisualMatic/Base.lproj/Main.storyboard
+++ b/Example/VisualMatic/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home-->
+        <!--VisualMatic-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="vXZ-lx-hvc" customClass="HomeViewController" customModule="VisualMatic_Example" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,24 +20,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiX-5d-eeR">
-                                <rect key="frame" x="157.5" y="318.5" width="60" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="BF2-HJ-2US"/>
-                                </constraints>
-                                <state key="normal" title="Scan"/>
-                                <connections>
-                                    <action selector="btnOpenCameraWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="unm-Kn-6hD"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WIV-Ob-jx8">
+                                <rect key="frame" x="10" y="272.5" width="355" height="122"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiX-5d-eeR">
+                                        <rect key="frame" x="130" y="0.0" width="95" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="Scan object"/>
+                                        <connections>
+                                            <action selector="btnRecogniseCustomObjectWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Tva-tf-6mj"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDX-Bs-151">
+                                        <rect key="frame" x="140" y="44" width="75" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="Scan text"/>
+                                        <connections>
+                                            <action selector="btnRecogniseTextWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="6co-oJ-PTl"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpU-Hj-Ehy">
+                                        <rect key="frame" x="121.5" y="88" width="112" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="Scan Barcode"/>
+                                        <connections>
+                                            <action selector="btnScanBarcodeWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="L7d-mn-A6s"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="hiX-5d-eeR" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="KFI-AT-Y0Y"/>
-                            <constraint firstItem="hiX-5d-eeR" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="VuH-Wc-7KJ"/>
+                            <constraint firstItem="WIV-Ob-jx8" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="10" id="33a-Xo-wRe"/>
+                            <constraint firstItem="WIV-Ob-jx8" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="Lcl-hu-QBC"/>
+                            <constraint firstAttribute="trailing" secondItem="WIV-Ob-jx8" secondAttribute="trailing" constant="10" id="T6Q-3I-O4M"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Home" id="MV9-QP-Sj3"/>
+                    <navigationItem key="navigationItem" title="VisualMatic" id="MV9-QP-Sj3"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
