--- a/VisualMatic/Resources/Main_Framework.storyboard
+++ b/VisualMatic/Resources/Main_Framework.storyboard
@@ -21,150 +21,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vwd-Qp-BMC" userLabel="Camera View">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="595"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Point your camera at an object" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W2W-on-vJv">
-                                <rect key="frame" x="62" y="566" width="251" height="21"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N3Y-ml-pjs">
+                                <rect key="frame" x="10" y="10" width="50" height="44"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="b41-gc-bJX"/>
-                                    <constraint firstAttribute="width" constant="251" id="pwF-Ik-h8z"/>
+                                    <constraint firstAttribute="height" constant="44" id="5jh-T2-Vwk"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="kgS-gA-0BD"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HqI-Rb-jR7">
-                                <rect key="frame" x="197" y="618" width="36" height="36"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="36" id="Bbk-82-ekC"/>
-                                    <constraint firstAttribute="height" constant="36" id="SAS-R9-ETD"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="xaT-VO-j7f"/>
-                                </constraints>
-                                <state key="normal" image="search"/>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="28"/>
+                                <state key="normal" title="X"/>
                                 <connections>
-                                    <action selector="objectClick:" destination="YXl-5B-mBF" eventType="touchUpInside" id="F0Q-nX-ZHJ"/>
+                                    <action selector="btnClose:" destination="YXl-5B-mBF" eventType="touchUpInside" id="RiN-xQ-AGG"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nJ7-L4-DOS">
-                                <rect key="frame" x="142" y="618" width="36" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="sRa-2B-C7h"/>
-                                </constraints>
-                                <state key="normal" image="textsearch"/>
-                                <connections>
-                                    <action selector="textClick:" destination="YXl-5B-mBF" eventType="touchUpInside" id="ryC-Lv-pdq"/>
-                                </connections>
-                            </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wfq-DE-MaD">
-                                <rect key="frame" x="16" y="595" width="76" height="64"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="76" id="rEM-C8-C4b"/>
-                                    <constraint firstAttribute="height" constant="64" id="x0I-Cn-tEF"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N3Y-ml-pjs">
-                                <rect key="frame" x="259" y="19" width="99" height="38"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="38" id="5jh-T2-Vwk"/>
-                                    <constraint firstAttribute="width" constant="99" id="kgS-gA-0BD"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Close"/>
-                                <connections>
-                                    <action selector="btnClose:" destination="YXl-5B-mBF" eventType="touchUpInside" id="6gc-EF-Qk6"/>
-                                </connections>
-                            </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="40" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="v9n-kw-xTV">
-                                <rect key="frame" x="0.0" y="327" width="375" height="0.0"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="340" id="IWN-qj-xVm"/>
-                                </constraints>
-                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CELL" id="QGW-31-5AB">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QGW-31-5AB" id="LFp-SV-qDB">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V6w-qs-gF6">
-                                                    <rect key="frame" x="16" y="20" width="60" height="60"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="60" id="8Sp-nt-iO1"/>
-                                                        <constraint firstAttribute="width" constant="60" id="c87-4n-U9y"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vuN-0R-Y3x">
-                                                    <rect key="frame" x="97" y="20" width="262" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="YLL-dy-Rzq"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7IZ-KE-OT1">
-                                                    <rect key="frame" x="97" y="45" width="263" height="44"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="vuN-0R-Y3x" firstAttribute="leading" secondItem="V6w-qs-gF6" secondAttribute="trailing" constant="21" id="0cg-qF-CpN"/>
-                                                <constraint firstItem="V6w-qs-gF6" firstAttribute="top" secondItem="LFp-SV-qDB" secondAttribute="topMargin" constant="9" id="3Vj-HY-aXS"/>
-                                                <constraint firstItem="7IZ-KE-OT1" firstAttribute="leading" secondItem="V6w-qs-gF6" secondAttribute="trailing" constant="21" id="FsF-cX-Hg7"/>
-                                                <constraint firstAttribute="bottom" secondItem="7IZ-KE-OT1" secondAttribute="bottom" constant="11" id="N4P-wS-Q0x"/>
-                                                <constraint firstItem="V6w-qs-gF6" firstAttribute="leading" secondItem="LFp-SV-qDB" secondAttribute="leadingMargin" id="aJO-3q-czj"/>
-                                                <constraint firstItem="vuN-0R-Y3x" firstAttribute="top" secondItem="LFp-SV-qDB" secondAttribute="topMargin" constant="9" id="ncu-O0-SWY"/>
-                                                <constraint firstItem="vuN-0R-Y3x" firstAttribute="trailing" secondItem="LFp-SV-qDB" secondAttribute="trailingMargin" id="rjJ-eF-W0j"/>
-                                                <constraint firstItem="7IZ-KE-OT1" firstAttribute="top" secondItem="vuN-0R-Y3x" secondAttribute="bottom" constant="4" id="yUu-Yf-xcL"/>
-                                                <constraint firstAttribute="trailing" secondItem="7IZ-KE-OT1" secondAttribute="trailing" constant="15" id="zjF-lN-WW3"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="YXl-5B-mBF" id="F27-qD-Slp"/>
-                                    <outlet property="delegate" destination="YXl-5B-mBF" id="RRT-Cm-dHk"/>
-                                </connections>
-                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="7NG-lt-hPa" firstAttribute="top" secondItem="Vwd-Qp-BMC" secondAttribute="bottom" constant="72" id="1vo-5N-wRZ"/>
-                            <constraint firstItem="N3Y-ml-pjs" firstAttribute="top" secondItem="qO2-JB-Jc4" secondAttribute="bottom" constant="19" id="4e2-In-c3L"/>
-                            <constraint firstAttribute="trailing" secondItem="v9n-kw-xTV" secondAttribute="trailing" id="7x7-Bd-prF"/>
-                            <constraint firstItem="HqI-Rb-jR7" firstAttribute="top" secondItem="nJ7-L4-DOS" secondAttribute="top" id="CAS-C3-KE0"/>
-                            <constraint firstAttribute="trailing" secondItem="HqI-Rb-jR7" secondAttribute="trailing" constant="142" id="DIh-U0-nB1"/>
-                            <constraint firstItem="wfq-DE-MaD" firstAttribute="leading" secondItem="bWY-Sx-TCF" secondAttribute="leadingMargin" id="Dxr-QK-G9l"/>
-                            <constraint firstItem="v9n-kw-xTV" firstAttribute="leading" secondItem="bWY-Sx-TCF" secondAttribute="leading" id="E7Q-0T-X5C"/>
-                            <constraint firstItem="7NG-lt-hPa" firstAttribute="top" secondItem="v9n-kw-xTV" secondAttribute="bottom" id="HHU-Bv-TCt"/>
+                            <constraint firstAttribute="bottom" secondItem="Vwd-Qp-BMC" secondAttribute="bottom" id="1vo-5N-wRZ"/>
+                            <constraint firstItem="N3Y-ml-pjs" firstAttribute="leading" secondItem="bWY-Sx-TCF" secondAttribute="leading" constant="10" id="5U3-iL-H7V"/>
                             <constraint firstItem="Vwd-Qp-BMC" firstAttribute="top" secondItem="qO2-JB-Jc4" secondAttribute="bottom" id="TPR-ef-skx"/>
-                            <constraint firstItem="W2W-on-vJv" firstAttribute="bottom" secondItem="Vwd-Qp-BMC" secondAttribute="bottom" constant="-8" id="a0q-sI-kmN"/>
-                            <constraint firstItem="7NG-lt-hPa" firstAttribute="top" secondItem="wfq-DE-MaD" secondAttribute="bottom" constant="8" id="eIj-Um-LCG"/>
                             <constraint firstItem="Vwd-Qp-BMC" firstAttribute="leading" secondItem="bWY-Sx-TCF" secondAttribute="leading" id="fbL-hm-kSo"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="N3Y-ml-pjs" secondAttribute="trailing" constant="3" id="g9S-Km-1fi"/>
-                            <constraint firstItem="W2W-on-vJv" firstAttribute="centerX" secondItem="Vwd-Qp-BMC" secondAttribute="centerX" id="h32-nB-4wH"/>
-                            <constraint firstItem="7NG-lt-hPa" firstAttribute="top" secondItem="HqI-Rb-jR7" secondAttribute="bottom" constant="13" id="jgM-L0-xkS"/>
-                            <constraint firstItem="HqI-Rb-jR7" firstAttribute="leading" secondItem="nJ7-L4-DOS" secondAttribute="trailing" constant="19" id="oxQ-3L-lo8"/>
+                            <constraint firstItem="N3Y-ml-pjs" firstAttribute="top" secondItem="qO2-JB-Jc4" secondAttribute="bottom" constant="10" id="onV-8i-v9W"/>
                             <constraint firstAttribute="trailing" secondItem="Vwd-Qp-BMC" secondAttribute="trailing" id="rDq-X3-o2R"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <toolbarItems/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="btnClose" destination="N3Y-ml-pjs" id="Agv-Z9-5hU"/>
                         <outlet property="cameraView" destination="Vwd-Qp-BMC" id="yRq-e8-30h"/>
-                        <outlet property="tblObj" destination="v9n-kw-xTV" id="PRI-F5-FRy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tub-Fx-HUo" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -493,9 +384,7 @@
         <image name="fb" width="30" height="30"/>
         <image name="linkedin" width="30" height="30"/>
         <image name="mail" width="30" height="30"/>
-        <image name="search" width="256" height="256"/>
         <image name="sendMSG" width="30" height="30"/>
-        <image name="textsearch" width="36" height="36"/>
         <image name="twitter" width="30" height="30"/>
         <image name="website" width="30" height="17"/>
         <image name="youtube" width="30" height="30"/>
