--- a/VisualMatic/Resources/Main_Framework.storyboard
+++ b/VisualMatic/Resources/Main_Framework.storyboard
@@ -106,6 +106,11 @@
                                     <constraint firstAttribute="bottom" secondItem="c8N-bf-e6o" secondAttribute="bottom" id="nNn-qq-hl1"/>
                                 </constraints>
                             </view>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="Y5D-Af-sSh">
+                                <rect key="frame" x="177" y="323" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="color" red="0.01176470588" green="0.51372549020000002" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
