--- a/VisualMatic/Resources/Main_Framework.storyboard
+++ b/VisualMatic/Resources/Main_Framework.storyboard
@@ -117,16 +117,16 @@
                             <constraint firstItem="N3Y-ml-pjs" firstAttribute="leading" secondItem="bWY-Sx-TCF" secondAttribute="leading" constant="10" id="5U3-iL-H7V"/>
                             <constraint firstAttribute="trailing" secondItem="79r-pz-baY" secondAttribute="trailing" constant="10" id="C4Y-RU-Fx6"/>
                             <constraint firstItem="rWO-tV-Iyq" firstAttribute="top" secondItem="Vwd-Qp-BMC" secondAttribute="bottom" id="DFx-qe-ebk"/>
+                            <constraint firstItem="N3Y-ml-pjs" firstAttribute="top" secondItem="qO2-JB-Jc4" secondAttribute="bottom" constant="10" id="HVx-Eu-EpM"/>
                             <constraint firstAttribute="bottom" secondItem="rWO-tV-Iyq" secondAttribute="bottom" id="JH5-b6-j3A"/>
                             <constraint firstItem="rWO-tV-Iyq" firstAttribute="top" secondItem="vZ4-30-NwV" secondAttribute="bottom" id="MeO-Vc-J1o"/>
-                            <constraint firstItem="Vwd-Qp-BMC" firstAttribute="top" secondItem="qO2-JB-Jc4" secondAttribute="bottom" id="TPR-ef-skx"/>
+                            <constraint firstItem="Vwd-Qp-BMC" firstAttribute="top" secondItem="qO2-JB-Jc4" secondAttribute="bottom" id="QCJ-3A-jdO"/>
+                            <constraint firstItem="79r-pz-baY" firstAttribute="top" secondItem="qO2-JB-Jc4" secondAttribute="bottom" constant="10" id="QdU-7U-JlY"/>
                             <constraint firstAttribute="trailing" secondItem="rWO-tV-Iyq" secondAttribute="trailing" id="bhq-EH-Xqc"/>
                             <constraint firstItem="Vwd-Qp-BMC" firstAttribute="leading" secondItem="bWY-Sx-TCF" secondAttribute="leading" id="fbL-hm-kSo"/>
                             <constraint firstItem="rWO-tV-Iyq" firstAttribute="leading" secondItem="bWY-Sx-TCF" secondAttribute="leading" id="fqY-14-Wq2"/>
                             <constraint firstItem="vZ4-30-NwV" firstAttribute="top" secondItem="79r-pz-baY" secondAttribute="bottom" id="giF-T8-5Kl"/>
                             <constraint firstAttribute="trailing" secondItem="vZ4-30-NwV" secondAttribute="trailing" id="hD0-fi-LLc"/>
-                            <constraint firstItem="79r-pz-baY" firstAttribute="top" secondItem="qO2-JB-Jc4" secondAttribute="bottom" constant="10" id="mHa-Yc-Uo0"/>
-                            <constraint firstItem="N3Y-ml-pjs" firstAttribute="top" secondItem="qO2-JB-Jc4" secondAttribute="bottom" constant="10" id="onV-8i-v9W"/>
                             <constraint firstAttribute="trailing" secondItem="Vwd-Qp-BMC" secondAttribute="trailing" id="rDq-X3-o2R"/>
                             <constraint firstItem="vZ4-30-NwV" firstAttribute="leading" secondItem="bWY-Sx-TCF" secondAttribute="leading" id="yz2-EE-NGv"/>
                         </constraints>
